<resources>
    <string name="app_name">PrestaShop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cart">Cart</string>
    <string name="title_shop">Fortune Home</string>


    <!--REGISTER-->
    <string name="title_register">Create an Account</string>
    <string name="title_login">Log in to your account</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="user_name">Name</string>
    <string name="user_lastname">Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_password2">Confirm Password</string>
    <string name="modify">Modify</string>
    <string name="user_log_out">Logout</string>
    <string name="logout_text">Successfully logged out</string>
    <string name="title_modify_user">Modifing user</string>



    <!--PRODUCTS-->
    <string name="product_title">Product Info</string>
    <string name="product_description">Description</string>
    <string name="product_shipping_cost">Shipping Cost</string>
    <string name="manufacturer_name">Manufacturer</string>
    <string name="product_favorite">Favorite</string>
    <string name="product_add_to_cart">Add to Cart</string>
    <string name="product_add_to_favorite">Add to Wish List</string>
    <string name="product_remove_from_favorite">Remove from Wish List</string>
    <string name="product_remove_from_cart">Remove from Cart</string>
    <string name="product_filter">Filter</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_total">Total</string>
    <string name="filter_category">Filter by category</string>


    <!--CART-->
    <string name="cart_title">Cart</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="cart_total">Total</string>
    <string name="cart_checkout">Checkout</string>
    <string name="cart_remove">Remove</string>
    <string name="cart_remove_all">Remove All</string>
    <string name="cart_remove_all_text">Are you sure you want to remove all items from your cart?</string>
    <string name="cart_remove_text">Are you sure you want to remove this item from your cart?</string>
    <string name="cart_remove_text_success">Item removed from cart</string>
    <string name="cart_remove_text_error">Error removing item from cart</string>
    <string name="cart_remove_all_text_success">All items removed from cart</string>
    <string name="cart_remove_all_text_error">Error removing all items from cart</string>
    <string name="add_to_cart_dialog">Do you want to add the product to your cart?</string>


    <!--Standard Answers-->

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cart_add_succesfully">Your product has been added successfully</string>
    <string name="cart_adding_error">There have been problems adding your product to the cart</string>
    <string name="cart_succesfully_obtained">Your cart was succesfully obtained</string>
    <string name="cart_obtaining_error">Error while obtaining your cart</string>
    <string name="connection_error">503 Service Temporarily Unavailable</string>
    <string name="cart_remove_dialog">Do you want to remove this item from your cart?</string>
    <string name="cart_checkout_text">You sure you want to check out?</string>

</resources>